ldap-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ldap
  labels:
    app: ldap
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ldap
    spec:
      containers:
        - name: ldap
          image: osixia/openldap:1.2.2
          volumeMounts:
            - name: ldap-data
              mountPath: /var/lib/ldap
            - name: ldap-config
              mountPath: /etc/ldap/slapd.d
            - name: ldap-certs
              mountPath: /container/service/slapd/assets/certs
          ports:
            - containerPort: 389
              name: openldap
      volumes:
        - name: ldap-data
          persistentVolumeClaim:
            claimName: ldap-pvc
        - name: ldap-config
          emptyDir: {}
        - name: ldap-certs
          emptyDir: {}
