ldap-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ldap-ingress
  labels:
    app: ldap
spec:
  backend:
    serviceName: ldap-service
    servicePort: 389
